EF Core Initiated

--- a/ExpenseTracker/appsettings.json
+++ b/ExpenseTracker/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-152FRH1;Database=ExpenseDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
